src/test/run-pass/native-src/native.rs



// -*- rust -*-
fn main() {
    libc.puts(rustrt.str_buf("hello, native world 1"));
    libc.puts(rustrt.str_buf("hello, native world 2"));
    libc.puts(rustrt.str_buf("hello, native world 3"));
}